tests/urmoac/input/wkt/errors/polygons_missing_id/destinations.wkt
#id;pos;[var]
;POLYGON((-210 -10, -190 -10, -190 10, -210 10, -210 -10))
